--- a/calculos.css
+++ b/calculos.css
@@ -18,8 +18,13 @@ button{
     margin-top: 40px;
     font-size: 32px;
     color: antiquewhite;
+    margin-bottom: 30px;
 }
 h1{
     color: rgb(13, 3, 44);
     font-size: 40px;
+}
+#label{
+   
+    font-size: 32px;
 }
